examples/examples_inferred/bad/unknown_id_1.ez
f x = y;

main = f 1;